2007-08-09  Anders Carlsson  <andersca@apple.com>

        Reviewed by Oliver.

        <rdar://problem/5313534> REGRESSION(Leopard): Some fast/xsl tests sometimes fail on Leopard

        These tests no longer fail for me, so let's try removing them from the skipped file
        and see what happens.
        
        * mac/leopard/Skipped:

2007-08-08  Beth Dakin  <bdakin@apple.com>

        Reviewed by Geoff Garen.

        Test for <rdar://problem/5286443>, http://bugs.webkit.org/
        show_bug.cgi?id=14268 REGRESSION: Radio buttons don't stay selected 
        due to unclosed <label> tags

        * fast/forms/radio-nested-labels-expected.checksum: Added.
        * fast/forms/radio-nested-labels-expected.png: Added.
        * fast/forms/radio-nested-labels-expected.txt: Added.
        * fast/forms/radio-nested-labels.html: Added.

2007-08-08  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Oliver.
        
        <rdar://problem/5387578> Crash at ReplaceSelectionCommand::doApply() when pasting just after table cell content

        * editing/pasteboard/5387578-expected.checksum: Added.
        * editing/pasteboard/5387578-expected.png: Added.
        * editing/pasteboard/5387578-expected.txt: Added.
        * editing/pasteboard/5387578.html: Added.

2007-08-08  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Harrison.
        
        <rdar://problem/5390681> WebKit asserts when deleting To Do content selected with a double-click        

        * editing/deleting/5390681-2-expected.checksum: Added.
        * editing/deleting/5390681-2-expected.png: Added.
        * editing/deleting/5390681-2-expected.txt: Added.
        * editing/deleting/5390681-2.html: Added.
        
        Added a FIXME about an extraneous newline:
        * editing/deleting/5390681-expected.checksum:
        * editing/deleting/5390681-expected.png:
        * editing/deleting/5390681-expected.txt:
        * editing/deleting/5390681.html:ada
