@@ -1,0 +1,62 @@
+layer at (0,0) size 785x658
+  RenderView at (0,0) size 785x600
+layer at (0,0) size 785x658
+  RenderBlock {HTML} at (0,0) size 785x658
+    RenderBody {BODY} at (8,8) size 769x630
+      RenderBlock {P} at (0,0) size 769x36
+        RenderText {#text} at (0,0) size 53x18
+          text run at (0,0) width 53: "Test for "
+        RenderInline {I} at (0,0) size 748x36
+          RenderInline {A} at (0,0) size 301x18 [color=#0000EE]
+            RenderText {#text} at (53,0) size 301x18
+              text run at (53,0) width 301: "http://bugs.webkit.org/show_bug.cgi?id=14875"
+          RenderText {#text} at (354,0) size 748x36
+            text run at (354,0) width 4: " "
+            text run at (358,0) width 390: "Textarea with nowrap - left/right nav, Up/down nav both hide"
+            text run at (0,18) width 22: "text"
+        RenderText {#text} at (22,18) size 4x18
+          text run at (22,18) width 4: "."
+      RenderBlock {P} at (0,52) size 769x18
+        RenderText {#text} at (0,0) size 458x18
+          text run at (0,0) width 458: "The letter A should be fully visible in each one of the eight boxes below."
+layer at (28,98) size 150x50 clip at (28,98) size 150x35 scrollX 50 scrollWidth 200
+  RenderBlock {DIV} at (20,90) size 150x50
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (188,0) size 12x18
+        text run at (188,0) width 12: "A"
+layer at (28,168) size 160x50 clip at (38,168) size 150x35 scrollX 50 scrollWidth 200
+  RenderBlock {DIV} at (20,160) size 160x50 [border: (10px solid #000000)]
+    RenderBlock {DIV} at (10,0) size 200x18
+      RenderText {#text} at (188,0) size 12x18
+        text run at (188,0) width 12: "A"
+layer at (28,238) size 160x50 clip at (28,238) size 150x35 scrollX 50 scrollWidth 200
+  RenderBlock {DIV} at (20,230) size 160x50 [border: (10px solid #000000) none]
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (188,0) size 12x18
+        text run at (188,0) width 12: "A"
+layer at (28,308) size 150x50 clip at (28,308) size 135x35 scrollX 65 scrollWidth 200
+  RenderBlock {DIV} at (20,300) size 150x50
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (188,0) size 12x18
+        text run at (188,0) width 12: "A"
+layer at (28,378) size 150x50 clip at (28,378) size 150x35 scrollWidth 200
+  RenderBlock {DIV} at (20,370) size 150x50
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (0,0) size 12x18
+        text run at (0,0) width 12: "A"
+layer at (28,448) size 160x50 clip at (38,448) size 150x35 scrollWidth 200
+  RenderBlock {DIV} at (20,440) size 160x50 [border: (10px solid #000000)]
+    RenderBlock {DIV} at (10,0) size 200x18
+      RenderText {#text} at (0,0) size 12x18
+        text run at (0,0) width 12: "A"
+layer at (28,518) size 160x50 clip at (28,518) size 150x35 scrollWidth 200
+  RenderBlock {DIV} at (20,510) size 160x50 [border: (10px solid #000000) none]
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (0,0) size 12x18
+        text run at (0,0) width 12: "A"
+layer at (28,588) size 150x50 clip at (28,588) size 135x35 scrollWidth 200
+  RenderBlock {DIV} at (20,580) size 150x50
+    RenderBlock {DIV} at (0,0) size 200x18
+      RenderText {#text} at (0,0) size 12x18
+        text run at (0,0) width 12: "A"
+scrolled to 0,6
